fixed footer items margins on mobile

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -79,12 +79,8 @@
     flex-direction: column;
   }
 
-  .footer-block__title{
-    
-  }
-
   .footer-block__list__item {
-    margin-bottom: 2rem;
+    margin-bottom: 18.62px;
   }
 }
 
